Validação e resetar senha

--- a/src/app/pages/changePassword/changePassword.component.html
+++ b/src/app/pages/changePassword/changePassword.component.html
@@ -1,7 +1,11 @@
 <div class="wrapper">
     <div class="page-header" style="background-image: url('./assets/img/signup.jpg');">
         <div class="filter"></div>
-        <div class="container">
+        <div *ngIf="loading==true" id="loading-wrapper">
+            <div id="loading-text">Carregando</div>
+            <div id="loading-content"></div>
+          </div>
+        <div *ngIf="loading==false" class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                     <div class="card card-register">
@@ -14,8 +18,8 @@
                                 <div class="input-group-prepend"><span
                                         class="input-group-text"><i
                                             class="nc-icon nc-key-25"></i></span></div><input
-                                    type="text" placeholder="Senha" class="form-control">
-                            </div><button
+                                    type="password" [(ngModel)]="newPassword" placeholder="Senha" class="form-control">
+                            </div><button (click)="passwordReset()"
                                 class="btn btn-danger btn-block btn-round">Renovar Senha</button>
                         </form>   
                 </div>
