--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -48,7 +48,7 @@
                                 <div class="input-group-prepend"><span
                                         class="input-group-text"><i
                                             class="nc-icon nc-email-85"></i></span></div><input
-                                    type="text" placeholder="Email" class="form-control">
+                                    type="text" placeholder="Email" class="form-control" [(ngModel)]="recoverPassEmail">
                             </div>
                                             
                                           </div>
@@ -56,7 +56,7 @@
                                       </form>
                                     </div>
                                     <div class="modal-footer">
-                                      <button type="button" class="btn btn-default" (click)="modal.close('Save click')">Enviar</button>
+                                      <button type="button" class="btn btn-default" (click)="recoverPass()">Enviar</button>
                                     </div>
                                   </ng-template>
                                   
