--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -27,7 +27,7 @@
                        </h5>
                      </h5>
                      <span class="text-center">R${{ doubleSlider[0] }} - R${{ doubleSlider[1] }}</span>
-                     <nouislider class="slider slider-info" [connect]="true" [min]="0" [max]="150" [step]="1" [(ngModel)]="doubleSlider" [tooltips]="false"></nouislider>
+                     <nouislider class="slider slider-info" [connect]="true" [min]="0" [max]="max" [step]="1" [(ngModel)]="doubleSlider" [tooltips]="false"></nouislider>
 
                    </div>
                    
