--- a/src/app/pages/orderDetail/orderDetail.component.html
+++ b/src/app/pages/orderDetail/orderDetail.component.html
@@ -6,6 +6,7 @@
   <div class="section">
     <div class="container">
       <h3 class="mb-3">Dados da encomenda</h3>
+      <h3 class="mb-3">Orçamento</h3>
       <div>
         <div class="row">
           <div class="col-md-12 col-sm-7">
@@ -16,71 +17,78 @@
                   <option value="2" ng-reflect-value="2">Em entrega</option>
                   <option value="3" ng-reflect-value="3">Produto em produção</option>
                 </select>
-              </div>
-              <div class="col-md-4">
-                <h6>Preço do Produto</h6><input type="text" value="30"
-                  placeholder="Preço" class="form-control border-input">
-              </div>
-              <div class="col-md-4">
-                <h6>Total com frete</h6><input type="text" value="39,99"
-                  placeholder="Preço" class="form-control border-input" readonly="">
+                <div class="col-md-2 col-sm-4"><button type="submit"
+                  class="btn btn-primary btn-block btn-round">Salvar</button></div>
               </div>
             </div>
             <div class="form-group row">
+              
               <div class="col-md-4">
-                <h6>Nome Cliente</h6><input type="text"
-                  placeholder="Coloque o nome do produto" value="Thurinasadan" class="form-control border-input"
-                  readonly="">
+                <h6>Nome Cliente</h6>
+                <p>Thurinasadan</p>
               </div>
               <div class="col-md-4">
                 <h6>Email do cliente</h6>
-                <div class="input-group border-input"><input type="text"
-                    value="thurinasadan123@yahoo.com" placeholder="thurinasadan123@yahoo.com"
-                    class="form-control border-input" readonly=""></div>
+                <p>thurinasadan123@yahoo.com</p>
               </div>
               <div class="col-md-4">
-                <label>Whatsapp</label>
-                <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                    <input type="text" value="(55) 991234567" class="form-control" readonly="" placeholder="DDD + Número" (focus)="focus1=true" (blur)="focus1=false" >
-                </div>
+                <h6>Whatsapp</h6>
+                <p>(55) 991234567</p>
             </div>
             </div>
             <div class="form-group row">
               <div class="col-md-3">
-                <h6>Data do Pedido</h6><input type="text"
-                  placeholder="Coloque o nome do produto" value="19/04/2021" class="form-control border-input"
-                  readonly="">
+                <h6>Data do Pedido</h6>
+                <p>05/08/2021, 00:45:37</p>
               </div>
             </div>
-            <div class="row price-row">
+            <div class="form-group row">
               <div class="col-md-3">
                 <h6>Modo de entrega</h6>
-                <div class="input-group border-input"><input type="text"
-                    value="PAC" placeholder="" class="form-control border-input" readonly=""></div>
+                <p>PAC</p>
               </div>
               <div class="col-md-3">
                 <h6>Cep</h6>
-                <div class="input-group border-input"><input type="text"
-                    value="98700000" placeholder="Em cm" class="form-control border-input" readonly=""></div>
+                <p>98700000</p>
               </div>
               <div class="col-md-3">
                 <h6>Estado</h6>
-                <div class="input-group border-input"><input type="text"
-                    value="RS" placeholder="" class="form-control border-input" readonly=""></div>
+               <p>RS</p>
               </div>
               <div class="col-md-3">
                 <h6>Frete</h6>
-                <div class="input-group border-input"><input type="text"
-                    value="9,99" placeholder="" class="form-control border-input" readonly=""></div>
+                <p>21,23</p>
               </div>
             </div>
+        <div class="form-group row">
+          <div class="col-md-12">
+          <h6>Descrição do cliente</h6>
+          <p>Já pensou em um Baby Groot todo charmoso e fofinho em sua casa. Encomende logo o seu.</p>
+        </div>
+        </div>
+        <br>
+        <!-- If not quote Order -->
+        <div class="form-group row">
+          <div class="col-md-4">
+          <h5>Produto</h5>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-md-3">
+          <h6>Produto</h6>
+          <p>Baby Groot</p>
+        </div>
+        <div class="col-md-3">
+          <h6>Preço</h6>
+          <p>30.00</p>
+        </div> 
             <div class="form-group mt-3">
-              <h6>Descrição do Porduto</h6><textarea
-                placeholder="Adicione uma descrição para o produto" rows="13" maxlength="150"
-                class="form-control textarea-limited"
-                readonly="">Já pensou em um Baby Groot todo charmoso e fofinho em sua casa. Encomende logo o seu.</textarea>
-              <h5><small></small></h5>
+              <div class="col-md-12">
+              <h6>Descrição do Porduto</h6>
+              <p>Já pensou em um Baby Groot todo charmoso e fofinho em sua casa. Encomende logo o seu.</p>
             </div>
+            </div>
+          </div>
           </div>
         </div>
         <div class="row col-md-5 col-sm-6 ml-auto mr-auto">
@@ -111,8 +119,6 @@
               class="btn btn-outline-danger btn-block btn-round">Cancelar</button></div>
           <div class="col-md-4 col-sm-4"><button type="submit"
               class="btn btn-outline-danger btn-block btn-round">Excluir</button></div>
-          <div class="col-md-4 col-sm-4"><button type="submit"
-              class="btn btn-primary btn-block btn-round">Salvar</button></div>
         </div>
       </div>
     </div>
